--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "forever": "^3.0.4",
     "http-server": "^0.12.3",
     "nodemon": "^2.0.7",
     "phaser": "^3.52.0"
