--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "express": "^4.17.1",
     "forever": "^3.0.4",
     "http-server": "^0.12.3",
